[package]
edition = "2021"
name = "bevy_geo_nodes"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "^0.12.1"}
bevy-inspector-egui = "0.22"
bevy_mod_raycast = "*"
polars = "0.36.2"
rand = "0.8.5"
rapier3d = {version = "*", features = ["simd-stable"]}
# strum = {version = "0.25", features = ["derive"]}
smooth-bevy-cameras = "0.10.0"
# https://docs.rs/noise/latest/noise/
noise = "0.8.2"
